--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <div class="quizHolder">
                 <!-- title and description in under disucssion -->
                 <!-- <h3 class="title"></h3>
-                                <h4 class="description"></h4> -->
+                    <h4 class="description"></h4> -->
 
                 <!-- timer holder -->
                 <div class="timerHolder">
@@ -94,7 +94,7 @@
                         stroke-linejoin="round"
                       />
                     </svg>
-                    TIME REMAINING: 1 hr 22 minutes
+                    TIME REMAINING: <span id="timer">1 hr 22 minutes</span>
                   </div>
                 </div>
 
