--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preload" as="script" href="js/utils.js" />
+    <link rel="preload" as="script" href="js/scorm/apiwrapper.js" />
+    <link rel="preload" as="script" href="js/scorm/scoapiwrapper.js" />
+    <link rel="preload" as="script" href="js/scorm/scodata.js" />
     <link rel="preload" as="script" href="js/model.js" />
     <link rel="preload" as="script" href="js/app.js" />
     <link rel="preload" as="script" href="js/index.js" />
@@ -181,6 +184,9 @@
     </div>
 
     <script src="js/utils.js"></script>
+    <script src="js/scorm/apiwrapper.js"></script>
+    <script src="js/scorm/scoapiwrapper.js"></script>
+    <script src="js/scorm/scodata.js"></script>
     <script src="js/model.js"></script>
     <script src="js/app.js"></script>
     <script src="js/index.js"></script>
