--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preload" as="script" href="js/model.js" />
     <link rel="preload" as="script" href="js/app.js" />
     <link rel="preload" as="script" href="js/index.js" />
-    <title>Assessment: Solar Build Construction Management</title>
+    <title>Assessment: Engineering And Contractor</title>
     <link rel="stylesheet" href="css/stylesheet.css" />
   </head>
   <body>
@@ -143,8 +143,8 @@
           <!-- end section -->
           <main class="container endSection hide">
             <div class="holder">
-              <p class="textCenter"><img src="./img/weldone.png" style="width:150px;"/></p>
-              <h2 class="textCenter textDanger">Well Done! You have scored <span id="score">60</span>%</h2>
+              <p class="textCenter welldone"><img src="./img/weldone.png" style="width:150px;"/></p>
+              <h2 class="textCenter textDanger"><span class="pass hide">Well Done! You have scored</span><span class="fail hide">Failed!</span> <span id="score">0</span>%</h2>
               <p class="textCenter">
                 You can chlose this window and take another pre-assessment or go to your training eLearning. <br/> To see how you did, click on nay question to expand it and see the correct answers
               </p>
