mobile fixes for matching

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                 <ul id="optionHolder" class="optionHolder">
                   <!-- question place holder -->
                 </ul>
+                <ul id="optionHolderForMobile" class="optionHolder matching mobileOnly">
+                  <!-- for matching for mobile only -->
+                </ul>
               </div>
             </div>
           </main>
